fix: fix flash of white in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,3 @@
 @import 'tailwindcss';
 
-@variant dark (&:where(.dark, .dark *));
-
-@media (prefers-reduced-motion: no-preference) {
-  * {
-    transition-property: color, background-color, border-color;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-duration: 300ms;
-  }
-}
+@custom-variant dark (&:where(.dark, .dark *));
